--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Kinduya</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. Vehicula ipsum a arcu cursus vitae congue mauris. Luctus accumsan tortor posuere ac ut. Sit amet mattis vulputate enim nulla. Pretium aenean pharetra magna ac. Duis at consectetur lorem donec massa sapien faucibus et. Eget lorem dolor sed viverra ipsum nunc aliquet bibendum enim. Aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque. Eget nunc scelerisque viverra mauris in aliquam.</string>
+
 </resources>
